[gd_scene format=3 uid="uid://c252o4kygyunh"]

[ext_resource type="Script" uid="uid://couggljbw3ry4" path="res://scripts/mmmmm.gd" id="1_d1dor"]
[ext_resource type="Script" uid="uid://c2wnhxen86yiv" path="res://scripts/win_canvas.gd" id="2_dx8pv"]
[ext_resource type="LabelSettings" uid="uid://dftbsam24v8pt" path="res://themes/label_settings_canvas_header.tres" id="2_qx7hw"]
[ext_resource type="Script" uid="uid://dd8lqcv6crk04" path="res://scripts/credits_canvas.gd" id="4_ey5gi"]
[ext_resource type="Script" uid="uid://ceocf5h4dh25y" path="res://scripts/title_canvas.gd" id="5_g8ct3"]
[ext_resource type="Texture2D" uid="uid://bgg55wt0dfhr6" path="res://art/titlescreen.png" id="6_g8ct3"]

[node name="mmmmm" type="Node2D" unique_id=1792399627]
script = ExtResource("1_d1dor")

[node name="world" type="Node" parent="." unique_id=1453462322]

[node name="win_canvas" type="CanvasLayer" parent="." unique_id=1722518719]
visible = false
script = ExtResource("2_dx8pv")

[node name="ColorRect" type="ColorRect" parent="win_canvas" unique_id=409901608]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.46666667, 0.46666667, 0.7019608, 1)

[node name="MarginContainer" type="MarginContainer" parent="win_canvas/ColorRect" unique_id=176851058]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 40.0
grow_horizontal = 2
theme_override_constants/margin_top = 30

[node name="VBoxContainer" type="VBoxContainer" parent="win_canvas/ColorRect/MarginContainer" unique_id=1869501020]
layout_mode = 2

[node name="Label" type="Label" parent="win_canvas/ColorRect/MarginContainer/VBoxContainer" unique_id=151695941]
layout_mode = 2
text = "WIN"
label_settings = ExtResource("2_qx7hw")

[node name="MarginContainer" type="MarginContainer" parent="win_canvas/ColorRect/MarginContainer/VBoxContainer" unique_id=337526647]
layout_mode = 2

[node name="buttons" type="VBoxContainer" parent="win_canvas/ColorRect/MarginContainer/VBoxContainer/MarginContainer" unique_id=1364861475]
layout_mode = 2

[node name="Button" type="Button" parent="win_canvas/ColorRect/MarginContainer/VBoxContainer/MarginContainer/buttons" unique_id=479599662]
layout_mode = 2
text = "Exit"

[node name="credits_canvas" type="CanvasLayer" parent="." unique_id=371110039]
visible = false
script = ExtResource("4_ey5gi")

[node name="ColorRect" type="ColorRect" parent="credits_canvas" unique_id=2145860533]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.46666667, 0.46666667, 0.7019608, 1)

[node name="MarginContainer" type="MarginContainer" parent="credits_canvas/ColorRect" unique_id=1238784211]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 40.0
grow_horizontal = 2
theme_override_constants/margin_top = 30

[node name="VBoxContainer" type="VBoxContainer" parent="credits_canvas/ColorRect/MarginContainer" unique_id=922161885]
layout_mode = 2

[node name="Label" type="Label" parent="credits_canvas/ColorRect/MarginContainer/VBoxContainer" unique_id=2082148666]
layout_mode = 2
text = "Credits
"
label_settings = ExtResource("2_qx7hw")

[node name="MarginContainer" type="MarginContainer" parent="credits_canvas/ColorRect/MarginContainer/VBoxContainer" unique_id=1974933202]
layout_mode = 2

[node name="buttons" type="VBoxContainer" parent="credits_canvas/ColorRect/MarginContainer/VBoxContainer/MarginContainer" unique_id=1900826131]
layout_mode = 2

[node name="Button" type="Button" parent="credits_canvas/ColorRect/MarginContainer/VBoxContainer/MarginContainer/buttons" unique_id=1943708224]
layout_mode = 2
text = "Exit"

[node name="title_canvas" type="CanvasLayer" parent="." unique_id=1062149007]
script = ExtResource("5_g8ct3")

[node name="TextRect" type="TextureRect" parent="title_canvas" unique_id=1593646425]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_g8ct3")

[node name="start" type="Button" parent="title_canvas/TextRect" unique_id=1816580993]
modulate = Color(0, 0, 0, 0)
self_modulate = Color(0, 0, 0, 0)
custom_minimum_size = Vector2(0, 69)
layout_mode = 0
offset_left = 626.5
offset_top = 614.0
offset_right = 693.5
offset_bottom = 683.0
theme_override_colors/font_color = Color(0, 0, 0, 0)
theme_override_colors/font_focus_color = Color(0, 0, 0, 0)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 0)
theme_override_colors/font_hover_color = Color(0, 0, 0, 0)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 0)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 0)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 0)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 0)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 0)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 0)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 0)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 0)
text = "
"

[node name="credits" type="Button" parent="title_canvas/TextRect" unique_id=4938269]
modulate = Color(0, 0, 0, 0)
self_modulate = Color(0, 0, 0, 0)
layout_mode = 0
offset_left = 595.5
offset_top = 688.0
offset_right = 734.5
offset_bottom = 735.0

[node name="exit" type="Button" parent="title_canvas/TextRect" unique_id=1384509466]
modulate = Color(0, 0, 0, 0)
self_modulate = Color(0, 0, 0, 0)
layout_mode = 0
offset_left = 477.5
offset_top = 701.0
offset_right = 570.5
offset_bottom = 736.0

[connection signal="button_up" from="credits_canvas/ColorRect/MarginContainer/VBoxContainer/MarginContainer/buttons/Button" to="credits_canvas" method="_on_exit_button_up"]
[connection signal="button_up" from="title_canvas/TextRect/start" to="title_canvas" method="_on_start_button_up"]
[connection signal="button_up" from="title_canvas/TextRect/credits" to="title_canvas" method="_on_credits_button_up"]
[connection signal="button_up" from="title_canvas/TextRect/exit" to="title_canvas" method="_on_end_button_up"]
